--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     --white: hsl(0, 0%, 100%);
     --soft-blue: hsl(215, 51%, 70%);
     --cyan: hsl(178, 100%, 50%);
+    --cyan-hover: hsla(178, 100%, 50%, 0.507);
 }
 
 *{
@@ -56,27 +57,33 @@ main p{
     align-items: center;
     width: 100%;
     border-radius: 18px;
-    margin-bottom: 20px;
 
 }
 
-picture:hover .overlay {
-    background: var(--cyan);
-    object-fit: scale-down;
-    object-position: center;
-    opacity: .6;
+picture {
+    position: relative; /* Establish picture as a positioning context */
+}
+
+.overlay {
+    position: absolute; 
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
     border-radius: 18px;
-    width: 302px;
-    margin: 0;
-    content: url(./images/icon-view.svg);
-    cursor: pointer;
-    position: absolute;
-    top: 200px;
+    object-fit: scale-down;
+    opacity: 0; 
+    background-color: var(--cyan-hover); 
+    transition: 0.3s ease; 
+    display: flex;
+    justify-content: center;
+    align-items: center; 
 }
 
-
-
-
+picture:hover .overlay{
+    opacity: 1; 
+    cursor: pointer;
+}
 
 .wrapper{
     display: flex;
